# dc-tracker-detection-api

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py  models.py
app/services/: browser_crawler.py  tech_detector.py  tech_patterns.py
data/: ghostery_patterns.json
tests/: test_api.py
