[project]
name = "tracker-detection-api"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "playwright==1.50.0",
    "playwright-stealth>=1.0.6",
    "beautifulsoup4>=4.12.3",
    "lxml>=4.9.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0"
]
